# estimation

./: .gitignore  CMakeLists.txt  README.md  TestMain.cpp
proj1/: fMatrix.cpp  fMatrix.h  fVector.cpp  fVector.h
proj2/: MatchingPoints.cpp  MatchingPoints.h  ParamEstimator.cpp  ParamEstimator.h  plotEstimateAndTraget.m
ref_file/: Example_LSEstimator.mat
testfile/: EstimatorTestAP.cpp  Example_LSEstimatorDesign.m
